--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "react": "^0.12.0",
     "d3": "*",
-    "lodash": "*",
+    "lodash": "*"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
