--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "scripts/main.js",
   "dependencies": {
     "twitter": "*",
+    "request": "*",
     "react": "^0.12.0",
     "lodash": "*"
   },
