--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "dependencies": {
     "twitter": "*",
     "request": "*",
-    "react": "^0.12.0",
-    "lodash": "*"
+    "react": "*",
+    "lodash": "*",
+    "react-mini-router": "*"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
